--- a/lib/client/Makefile
+++ b/lib/client/Makefile
@@ -4,7 +4,7 @@ FORCE: help
 all: FORCE ## This is a library, nothing to build. You can however run tests...
 
 test: FORCE ## Run tests 
-	go test -failfast  -p 1 -v ./pkg/...
+	go test -failfast -race  -p 1 -v ./pkg/...
 
 clean: ## Clean distribution files
 	go mod tidy
