--- a/authn/Makefile
+++ b/authn/Makefile
@@ -21,11 +21,11 @@ dist: clean   ## Build binary distribution tarball
 		tar -czf $(PKG_NAME) -C $(DIST_FOLDER) .
 
 test: all .PHONY ## Run tests sequentially
-	go test -race -failfast -p 1 -v ./...
+	go test -race -failfast -p 1 -cover ./...
 
 clean: ## Clean distribution files
 	go mod tidy
-	go clean
+	go clean -cache -testcache
 	rm -f test/certs/*
 	rm -f test/logs/*
 	rm -f $(DIST_FOLDER)/bin/*
@@ -48,4 +48,3 @@ upgrade:
 
 help: ## Show this help
 	@grep -E '^[a-zA-Z0-9_-]+:.*?## .*$$' $(MAKEFILE_LIST) | sort | awk 'BEGIN {FS = ":.*?## "}; {printf "\033[36m%-20s\033[0m %s\n", $$1, $$2}'
-
