--- a/pkg/launcher/config/launcher.yaml
+++ b/pkg/launcher/config/launcher.yaml
@@ -4,28 +4,31 @@
 loglevel: info
 
 # log launcher to file at level info (default is true)
-logfile: true  #
+#logfile: true  #
 
-# write service stdout and stderr to logfile at logs/{servicename}.log
-logservices: true
+# write service stdout and stderr to logfile at logs/{servicename}.log (default is true)
+#logservices: true
 
 # logfile permissions. default is 0640
 #logperm: 0640  TODO
 
 # attach to service stderr for logging and testing (default is true)
-attachstderr: true
+#attachstderr: true
 
 # attach to service stdout for logging and testing (default if false)
-attachstdout: false
+#attachstdout: false
 
 # automatically restart services when they stop
-autorestart: false    # enable the auto-restart feature (default is disabled)
+#autorestart: false    # enable the auto-restart feature (default is disabled)
 
-# Services to automatically start on startup, in order of priority.
+# Order of services to start
 autostart:
-  #- state
-  #- certs
-  - directory
-  #- history
-  #- provisioning
-  #- gateway
+  - certs           # certificate service
+  - gateway         # gateway service for network access
+  #- state           # service state storage
+  #- pubsub          # publish/subscribe service
+  #- authn           # user authentication service
+  #- authz           # user authorization service
+  #- directory       # directory service
+  #- history         # history service
+  #- provisioning    # IoT device provisioning service
